tests/type_errors/variant_comparison.nos
# expect: true
# Variants auto-derive Ord (alphabetical by constructor name)
# Red > Green because "Red" > "Green" alphabetically
type Color = Red | Green | Blue
main() = Red > Green
